[project]
name = "hl-removal"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=2.0,<3.0)",
]

[dependency-groups]
numba = ["numba>=0.62.0", "scipy>=0.16", 'intel-cmplr-lib-rt>=2025.3.1']
torch = ["torch"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
